# TEST1

./: .gitignore  CMakeLists.txt  README.md  cloudcomparison.cpp  cloudcomparison.h  cluster.cpp  cluster.h  cluster.ui  clusterlist.cpp  clusterlist.h  clusterlist.ui  collision_detection.cpp  collision_detection.h  collisiondialog.cpp  collisiondialog.h  colorassigner.cpp  colorassigner.h  colorchanger.cpp  colorchanger.h  colorchanger.ui  convert2dto3dgriddialog.cpp  convert2dto3dgriddialog.h  convert2dto3dgriddialog.ui  detection.ui  fonts.qrc  generate2dgriddialog.cpp  generate2dgriddialog.h  generate2dgriddialog.ui  generate3dgriddialog.cpp  generate3dgriddialog.h  generate3dgriddialog.ui  gridpopulationdensitydialog.cpp  gridpopulationdensitydialog.h  gridpopulationdensitydialog.ui  gridvisibilitydialog.cpp  gridvisibilitydialog.h  gridvisibilitydialog.ui  identifysimilarclustersdialog.cpp  identifysimilarclustersdialog.h  main.cpp  (+30 more)
